# SongSearch-Organizer

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  release-please-config.json  requirements.txt
.github/workflows/: release-please.yml  release.yml  tests.yml
assets/icons/: .gitkeep
config/: templates.yml
songsearch/: ai_assistant.py
songsearch/ai/: __init__.py  assistant.py
songsearch/app/: __main__.py
songsearch/cli/: main.py
songsearch/core/: cover_art.py  db.py  duplicates.py  help_center.py  jobs.py  metadata_enricher.py  organizer.py  scanner.py  spectrum.py  utils.py
songsearch/integrations/: __init__.py  rekordbox.py
songsearch/ui/: __init__.py  app.py  details_panel.py  main_window.py  theme.py
tests/: test_ai_assistant.py  test_cli_chat.py  test_core.py  test_cover_art.py  test_duplicates.py  test_help_center.py  test_metadata_enricher.py  test_ui_organizer.py  test_utils.py
