[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "songsearch-organizer"
version = "0.3.1"
description = "Organizador de bibliotecas musicales con UI PySide6 y CLI Typer."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "SongSearch Organizer Authors" }]
requires-python = ">=3.12,<4.0"
dependencies = [
    "mutagen==1.47.0",
    "watchdog==6.0.0",
    "python-dotenv==1.1.1",
    "PySide6==6.9.2",
    "tqdm==4.67.1",
    "rich==14.1.0",
    "pydantic==2.11.9",
    "typer==0.17.4",
    "PyYAML==6.0.2",
    "ffmpeg-python==0.2.0",
    "pyacoustid==1.3.0",
    "musicbrainzngs==0.7.1",
]

[project.optional-dependencies]
dev = [
    "coverage[toml]==7.10.6",
    "coverage-badge==1.1.2",
    "pytest==8.4.2",
    "pytest-cov==7.0.0",
    "mypy==1.18.1",
    "ruff==0.13.0",
    "pre-commit==4.3.0",
    "pip-tools==7.5.0",
    "types-PyYAML==6.0.12.20240917",
]

[project.scripts]
songsearch = "songsearch.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["songsearch*"]

[tool.setuptools.package-data]
songsearch = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP", "N"]
per-file-ignores = {"tests/" = ["S101"]}

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true
files = ["songsearch/core"]

[tool.coverage.run]
branch = true
source = ["songsearch"]
omit = [
    "songsearch/ui/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == \"__main__\":",
]
show_missing = true
skip_covered = true

[tool.coverage.xml]
output = "coverage.xml"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["."]
